--- a/css/styles.css
+++ b/css/styles.css
@@ -1,42 +1,55 @@
 body{
   font-family: 'Exo 2', sans-serif;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 header, #footer{
-  background-image: url("https://s-media-cache-ak0.pinimg.com/originals/59/67/b9/5967b95bf7ded46e9249cc919d593299.jpg");
+  background-image: url("https://www.moon-dream.co.uk/images/MoonDreamideaforwebsitelogo4.jpg");
   background-repeat: no-repeat;
   padding-top: 50px;
   padding-bottom: 50px;
-  opacity: 0.8;
+  opacity: 0.9;
+  color:  #ffcc00;
 }
 
 p{
   text-align: center;
 }
 
-h1{
+h1, h2{
   text-align: center;
+  font-size: 50px;
   font-weight: bold;
-  color: #0000ff;
+  color:   #ffcc00;
   font-family: 'Bungee Shade', cursive;
 
 
 }
 
 .row{
-  margin-top: 35px;
-  margin-bottom: 35px;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 45px;
+  margin-bottom: 45px;
 }
 
 img{
-  height: 150px;
-  width: 150px;
+  height: 180px;
+  width: 180px;
   display: block;
   margin-left: auto;
   margin-right: auto;
   border-radius: 50%;
   margin-bottom: 18px;
+  -webkit-transition: -webkit-transform 1.0s ease-in-out;
+  transition: transform 1.0s ease-in-out;
+}
+
+img:hover{
+  /*height: 160px;
+  width: 160px;*/
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
 
 
@@ -60,7 +73,7 @@ img{
   text-align: center;
 }
 
-#name8, #position8, #alias8, #bio8 {
+#name8, #position8, #alias8, #bio8, #aliasBox {
   text-align: center;
 }
 
